- Fix: The submenu toggle not working when "Flyout Menu" is used and the page is resized.
- Fix: Customizer color group control's reset position misaligned.
- Fix: Desktop logo width is applying on the mobile devices for a moment.
- Fix: Social icon does not change in customizer preview.
- Fix: The default "Add Widget" text alignment issue in header.
- Deprecated: Builder - Account Element - Deprecated transparent header's responsive options for menu colors.

v3.6.8
- Improvement: Added WPML translation support for all customizer's strings through wpml-config.xml file.
- Fix: Elementor Pro's Header-Footer theme builder layouts does not override theme's Header-Footer builder layouts.
- Fix: Bulk action selection not working on any WordPress list table when theme's "Get Started" notice is active.
- Fix: Header Footer Widgets: Off-canvas content is displaying over Legacy widget's preview in the customizer for WordPress 5.8.
- Deprecated: Header Footer Widgets - Deprecated design specific options for better compatibility with WordPress 5.8. ( https://wpastra.com/docs/enable-astra-widget-design-options/ )

v3.6.7
- Improvement: Rendered Addon dependent toggle code conditionally and removed unwanted code.
- Improvement: Changed the screen reader text tag from 'h2' to 'span' for better SEO.
- Fix: Changing Off-canvas flyout close button color not reflecting on frontend.
- Fix: Broken layout WooCommerce Shop/Archive page on mobile view when using elementor template or Product archive widget.
- Fix: Next and Previous pagination button is not aligned with page numbers for mobile view.
- Fix: Added dynamic breakpoint support for the responsive view of the sidebar and main content.
- Fix: Heading color h1-h6 of customizer not working in the Gutenberg editor.
- Fix: Global headings font family not working in the Gutenberg editor.
- Fix: Footer Builder - Widgets - Right margin space not working. ( https://wpastra.com/docs/fix-footer-widget-right-margin/ )