@@ -13,6 +13,7 @@ v3.6.9
 - Fix: Desktop logo width is applying on the mobile devices for a moment.
 - Fix: Social icon does not change in customizer preview.
 - Fix: The default "Add Widget" text alignment issue in header.
+- Fix: Gutenberg Editor content area showing white background color when Full-Width Contained / Stretched layout is active.
 - Deprecated: Builder - Account Element - Deprecated transparent header's responsive options for menu colors.
 
 v3.6.8
